--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,14 @@
 @font-face {
+    font-family: 'AvenirNextMedium';
+    src: url('../fonts/AvenirNextMedium.eot');
+    src: url('../fonts/AvenirNextMedium.eot') format('embedded-opentype'),
+         url('../fonts/AvenirNextMedium.woff2') format('woff2'),
+         url('../fonts/AvenirNextMedium.woff') format('woff'),
+         url('../fonts/AvenirNextMedium.ttf') format('truetype'),
+         url('../fonts/AvenirNextMedium.svg#AvenirNextMedium') format('svg');
+}
+
+@font-face {
     font-family: 'AvenirNextLTProRegular';
     src: url('../fonts/AvenirNextLTProRegular.eot');
     src: url('../fonts/AvenirNextLTProRegular.eot') format('embedded-opentype'),
@@ -27,6 +37,7 @@
 body{
   font-family: 'AvenirNextLTProRegular';
   background: #f4f8fb none repeat scroll 0 0;
+  color:#2c2e3d;
 }
 .header-wrapper {
   background: rgba(0, 0, 0, 0) url("../images/banner.jpg") no-repeat scroll 0 0 / cover ;
@@ -34,7 +45,6 @@ body{
 }
 .sign-in-button {
   font-size: 13px;
-  font-weight: 700;
   height: 50px;
   margin-bottom: 15px;
   padding: 10px;
@@ -73,7 +83,7 @@ body{
   display:none;
 }
 #first-step.active, #second-step.active{
-  display:block;
+  display:flex;
 }
 .inner-navbar {
   background: #fff none repeat scroll 0 0;
@@ -103,7 +113,7 @@ body{
   font-size: 12px;
   line-height: 2.3em;
   text-transform: uppercase;
-  font-family: 'AvenirNextLTProRegular';
+  font-family: 'AvenirNextMedium';
 }
 .dropdown-toggle::after{
   border-left: 0.4em solid transparent;
@@ -129,4 +139,170 @@ body{
 }
 .dropdown-menu .dropdown-item{
   padding: 4px 7px;
-}  
+  font-family: 'AvenirNextMedium';
+} 
+.boxed-section h4 {
+  font-family: "AvenirNextDemiBold";
+  font-size: 20pt;
+  margin-bottom: 30px;
+}
+.boxed-section {
+  background: #fff none repeat scroll 0 0;
+  margin-bottom: 25px;
+  min-height: 480px;
+  padding: 40px 40px 20px;
+  -webkit-box-shadow: 0px 2px 5px 3px rgba(221,221,221,0.77);
+  -moz-box-shadow: 0px 2px 5px 3px rgba(221,221,221,0.77);
+  box-shadow: 0px 2px 5px 3px rgba(221,221,221,0.77);
+  border-radius:2px;
+}
+.padding-left-zero{
+  padding-left:0;
+}
+.col-heading-icons-details-signin {
+  font-family: "AvenirNextMedium";
+  font-size: 14px;
+  line-height: 1.8em;
+  margin: 0;
+}
+.col-heading-icons-details-signin strong {
+  font-family: "AvenirNextLTProRegular";
+}
+.form-control {
+  background-color: #f4f8fb;
+  height: 50px;
+  color:#9eafb9;
+}
+.form-control::-webkit-input-placeholder{
+  color: #9eafb9;
+  opacity: 1;
+}
+.form-control::-moz-placeholder{
+  color: #9eafb9;
+  opacity: 1;
+}
+.form-control:-ms-input-placeholder{
+  color: #9eafb9;
+  opacity: 1;
+}
+.form-control::-moz-placeholder {
+  color: #9eafb9;
+  opacity: 1;
+}
+.text-muted {
+  color: #9eafb9 !important;
+}
+.padding-zero{
+  padding:0;
+}
+.register-bs{
+  color: #426df7;
+}
+.register-bs a {
+  color: #426df7;
+}
+.footer-logo{
+  color:#b3c0c8;
+  font-size:13pt;
+  font-family: 'AvenirNextMedium';
+}
+.footer-copyrights{
+  color:#b3c0c8;
+  font-size:13pt;
+  font-family: 'AvenirNextMedium';
+}
+.icons-box{
+  width:100%;
+}
+.boxed-section .div-with-ease{
+  color:#426df7;
+} 
+.join-now-button{
+  font-family: "AvenirNextMedium";
+}
+.para-two {
+  margin-bottom: 10px;
+}
+.boxed-registered-as-buyer {
+  min-height: 507px;
+}
+select {
+  height: 50px !important;
+} 
+.boxed-steps-secion {
+  min-height: 700px;
+}
+.padding-right-zero{
+  padding-right:0;
+}
+.steps-imgs{
+  width:100%;
+}
+.step-per-desp p {
+  margin-bottom: 7px;
+  margin-top: 8px;
+}
+.go-back-button{
+  background:#fff;
+  color:#2c2e3d;
+  font-family: "AvenirNextMedium";
+  border-color:#ccc;
+}
+.congrats-img {
+  margin-right: 12px;
+  vertical-align: text-top;
+}
+.user-reg-name {
+  font-size: 17pt !important;
+  margin-bottom: 10px !important;
+  margin-top: 37px;
+}
+.designation {
+  color: #2c2e3d;
+  font-family: "AvenirNextLTProRegular";
+  font-size: 14pt;
+  margin: 6px;
+}
+.reg-name-position {
+  background: #0848a0 none repeat scroll 0 0;
+  border-radius: 45px;
+  color: #fff;
+  font-size: 16px;
+  line-height: 4em;
+  padding: 6px 14px;
+  text-transform: uppercase;
+}
+.decision-maker-button {
+  background: #fff none repeat scroll 0 0;
+  border-color: #426df7;
+  color: #426df7 !important;
+  margin-top: 20px;
+  width: 286px;
+}
+.boxed-congrats {
+  min-height: 411px;
+}
+
+@media screen and (max-width: 767px) {
+	.navbar-brand {
+	  font-size: 19pt;
+	}
+	.decision-maker-button {
+	  width: 235px;
+}
+}
+@media screen and (max-width: 767px) {
+	.mobile-row{
+	  margin:0;
+	}
+}
+@media screen and (max-width: 991px) {	
+	.nav-item.dropdown {
+	  margin-bottom: 8px;
+	  margin-top: 17px;
+	  width: 100%;
+	}
+	#navbarDropdownMenuLink{
+	 padding-left:10px;
+	}
+}
