Signin-up text centered for mobile devices.

--- a/css/style.css
+++ b/css/style.css
@@ -295,6 +295,9 @@ select {
 	.mobile-row{
 	  margin:0;
 	}
+	.register-bs {
+	  text-align: center;
+	}
 }
 @media screen and (max-width: 991px) {	
 	.nav-item.dropdown {
