--- a/css/style.css
+++ b/css/style.css
@@ -279,11 +279,116 @@ select {
 .boxed-congrats {
   min-height: 411px;
 }
-.register-bs {
-  text-align: center;
-}
 .icons-box.icon-supplier {
   height: 50px;
+}
+.para-three {
+  margin: 0;
+}
+.supplier-profile-icons {
+  margin-right: 5px;
+  vertical-align: text-top;
+}
+.filling-steps-column{
+   font-size: 15px;
+}
+#fordespcompany {
+  min-height: 110px;
+}
+.bx {
+  display:flex;
+  align-items:center;
+  height:100%;
+}
+input[type="checkbox"] {
+  display:none;
+}
+.label-txt {
+  cursor: pointer;
+  display: inline-block;
+  font-size: 15.5px;
+  line-height: 1.1em;
+  vertical-align: middle;
+}
+.label-cbx {
+  background: #f4f8fb none repeat scroll 0 0;
+  width:25px;
+  height:25px;
+  position:relative;
+  display:inline-block;
+  vertical-align:middle;
+  border:1px solid rgba(0, 0, 0, 0.15);
+  border-radius:2px;
+  transition:0.3s ease;
+  cursor:pointer;
+  margin-right:7px;
+}
+.i_bx {
+  margin-bottom: 11px;
+}
+input[type="checkbox"]:checked + .label-cbx {
+  border-color: transparent;
+}
+.label-cbx:before {
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  margin: -10px 0 0 -10px;
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  background: #1976D2;
+  transform: scale(0);
+}
+input[type="checkbox"]:checked + .label-cbx:before {
+  transform: scale(1);
+  opacity:0;
+  transition: all 0.6s ease-out;
+}
+.label-cbx:after {
+  content:"";
+  position:absolute;
+  top:17px;
+  left:10px;
+  border-bottom:3px solid transparent;
+  border-right:3px solid transparent;
+}
+input[type="checkbox"]:checked + .label-cbx:after {
+  animation:0.10s DrawMark ease-out 0.1s;
+  animation-fill-mode:forwards;
+}
+@keyframes DrawMark {
+  0% {
+    width:0px;
+    height:0px;
+    transform:translate(0,0) rotate(45deg);
+  }
+  100% {
+    width:7px;
+    height:14px;
+    border-bottom:3px solid #1976D2;
+    border-right:3px solid #1976D2;
+    transform:translate(0,-15px) rotate(45deg);
+  }
+}
+.custom-file{
+  height:auto;
+}
+.custom-file-label {
+  background: #f4f8fb none repeat scroll 0 0;
+  border: 1px dashed #426df7;
+  color: #426df7;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 13px;
+  padding: 15px 5px;
+  width: 100%;
+  font-family: 'AvenirNextMedium';
+  border-radius:4px;
+}
+.custom-file-label span{
+  text-transform:uppercase;
 }
 @media screen and (max-width: 767px) {
 	.navbar-brand {
