--- a/css/style.css
+++ b/css/style.css
@@ -390,6 +390,33 @@ input[type="checkbox"]:checked + .label-cbx:after {
 .custom-file-label span{
   text-transform:uppercase;
 }
+#exampleInputPassword1{
+  position:relative;
+}
+.company-info-icon{
+  position:absolute;
+  right: 21px;
+  top: 44px;
+}
+.tooltip-inner {
+  max-width: 150px;
+  padding: 3px 8px;
+  color: #000;
+  text-align: center;
+  background: #fff !important;
+  border-radius: .25rem;
+}
+.tooltip.top .tooltip-arrow {
+    border-top-color: #7abcff;
+}
+.tooltip.bs-tooltip-auto[x-placement^=top] .arrow::before, .tooltip.bs-tooltip-top .arrow::before {
+    margin-left: -15px;
+    content: "";
+    border-width: 5px 5px 0;
+    border-top-color: #fff;
+}
+
+
 @media screen and (max-width: 767px) {
 	.navbar-brand {
 	  font-size: 19pt;
