--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,8 @@ body{
   border-color:#ccc;
 }
 .sign-in-button {
+  color: #fff !important;
+  cursor: pointer;
   line-height: 2em;
 }
 .indicaors-icons > a {
@@ -401,21 +403,14 @@ input[type="checkbox"]:checked + .label-cbx:after {
 .tooltip-inner {
   max-width: 150px;
   padding: 3px 8px;
-  color: #000;
+  color: #fff;
   text-align: center;
-  background: #fff !important;
+  background: #000 !important;
   border-radius: .25rem;
 }
-.tooltip.top .tooltip-arrow {
-    border-top-color: #7abcff;
+.checkbox-padding {
+  padding-left: 15px;
 }
-.tooltip.bs-tooltip-auto[x-placement^=top] .arrow::before, .tooltip.bs-tooltip-top .arrow::before {
-    margin-left: -15px;
-    content: "";
-    border-width: 5px 5px 0;
-    border-top-color: #fff;
-}
-
 
 @media screen and (max-width: 767px) {
 	.navbar-brand {
